# Arxivision

./: .gitignore  CMakeLists.txt  LICENSE  README.md  general.sh  imgui.ini  log.txt  main.cpp  xcode.sh
data/scenes/: monu1.vox  monu10.vox  monu5Edited.vox  monu7Emit.vox  monu9.vox  monu9Emit.vox  pieta.vox  sword.vox
libs/: CMakeCache.txt  Makefile  cmake_install.cmake  glfw3.h  tiny_obj_loader.h
libs/imgui/: imconfig.h  imgui.h
libs/vulkan/vulkan/: vulkan_core.h  vulkan_profiles.hpp
scenes/: house.vox  monu1.vox  monu10.vox  pieta.vox
shaders/: cluster_cullLight.comp  common_structs.glsl  compile.sh  composition.frag  composition.spv  culling.spv  deferred.frag  depth_pyramid.comp  depth_pyramid.spv  faceVisibility.comp  frag.spv  frustum_clusters.comp  fullscreen.spv  gbuffer.frag  gbuffer.vert  gbuffer_frag.spv  gbuffer_vert.spv  imgui.frag  occlusionEarly_culling.comp  occlusionEarly_culling.spv  occlusionLate_culling.comp  occlusionLate_culling.spv  occlusion_culling.comp  occlusion_culling.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  pyramid.spv  simple_shader.frag  simple_shader.vert  ssao.frag  ssao.spv  ssaoBlur.frag  vert.spv
source/: app.cpp  app.h  arx_SSAO_Resources.h  arx_buffer.cpp  arx_buffer.h  arx_camera.cpp  arx_camera.h  arx_depthPyramid_manager.cpp  arx_depthPyramid_manager.hpp  arx_descriptors.cpp  arx_descriptors.h  arx_device.cpp  arx_device.h  arx_editor.cpp  arx_editor.hpp  arx_frame_info.h  arx_game_object.cpp  arx_game_object.h  arx_model.cpp  arx_model.h  arx_pipeline.cpp  arx_pipeline.h  arx_render_pass_manager.cpp  arx_render_pass_manager.hpp  arx_renderer.cpp  arx_renderer.h  arx_renderer_resources.cpp  arx_swap_chain.cpp  arx_swap_chain.h  arx_texture_manager.cpp  arx_texture_manager.hpp  arx_utils.h  arx_window.cpp  arx_window.h  engine_pch.cpp  engine_pch.hpp  simple_render_system.cpp  simple_render_system.h  threadpool.h  user_input.cpp  (+1 more)
source/editor/: arx_editor.cpp  arx_editor.hpp
source/editor/logging/: arx_logger.cpp  arx_logger.hpp
source/editor/profiling/: arx_profiler.cpp  arx_profiler.hpp
source/geometry/: LTC.h  block.h  blockMaterials.cpp  blockMaterials.hpp  chunkManager.cpp  chunkManager.h  chunks.cpp  chunks.h  svo.cpp  svo.hpp
source/logging/: arx_logger.cpp  arx_logger.hpp
source/managers/: arx_buffer_manager.cpp  arx_buffer_manager.hpp  arx_render_pass_manager.cpp  arx_render_pass_manager.hpp  arx_texture_manager.cpp  arx_texture_manager.hpp
source/systems/: clustered_shading_system.cpp  clustered_shading_system.hpp  face_visibility_system.cpp  face_visibility_system.hpp  occlusion_system.cpp  occlusion_system.hpp  point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h  ssao_render_system.cpp  ssao_render_system.hpp
